<?xml version="1.0" encoding="utf-8"?>
    <!--:: List of restaurants ::-->
    <androidx.recyclerview.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/restaurant_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_restaurant_list"
        tools:context=".view.fragmentRestaurantList.RestaurantListFragment"/>
