<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.MainActivity"
    >

    <!--:: Map View ::-->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/google_maps_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:tag="google_maps_fragment"
        />

    <!--:: "My location" Button  ::-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_my_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginEnd_fml"
        android:layout_marginBottom="@dimen/marginBottom_fml"
        android:backgroundTint="@color/white"
        android:src="@drawable/my_location_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/my_location_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>