...
                app:layout_constraintStart_toStartOf="parent"
                app:menu="@menu/bottom_nav_menu" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--:: Navigation View ::-->
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            style="@style/NavigationDrawerStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/colorMain"
            app:headerLayout="@layout/nav_header"
...
